--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<div id="header">
 				<!--<span class="logo icon fa-paper-plane"></span>-->
-				<h1>Hi, This is Pardeepti</h1>
-				<p>Data Analyst well versed in <a href="">SQL, R, Tableau and Advanced Excel</a>
+				<h1>Hi, My name is Pardeepti</h1>
+				<p>I am a Data Analyst well versed in <a href="">SQL, R, Tableau and Advanced Excel</a>
 				<br />
 			<!--	and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 			-->
@@ -31,7 +31,7 @@
 					<br />
 					by using data & generating insights
 					<br />
-					that support effective decision making.</h2>
+					to support effective decision making.</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
