--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
 		<!-- Header -->
 			<div id="header">
 				<!--<span class="logo icon fa-paper-plane"></span>-->
-				<h1>Hi, My name is Pardeepti</h1>
+				<h1>Pardeepti's Project Portfolio</h1>
 				<p>I am a Data Analyst well versed in <a href="">SQL, R, Tableau and Advanced Excel</a>
 				<br />
+					<h2> I help businesses solve problems
+					<br />
+					by using data & generating insights
+					<br />
+					that support effective decision making.</h2>
+					
 			<!--	and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 			-->
 			</div>
@@ -26,7 +32,7 @@
 		<!-- Main -->
 			<div id="main">
 
-				<header class="major container medium">
+				<!--<header class="major container medium">
 					<h2> I help businesses solve problems
 					<br />
 					by using data & generating insights
@@ -36,7 +42,7 @@
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
 					-->
-				</header>
+				</header> -->
 
 				<div class="box alt container">
 					<section class="feature right">
@@ -45,6 +51,14 @@
 							<h3>Market Research Report</h3>
 							<p>The project is about Next Generation Sequencing (NGS) Market, 2020-2030. It covers the Genome Sequencing Services, Technologies and the companies in NGS domain.</p>
 							<a href='https://www.rootsanalysis.com/reports/view_document/next-generation-sequencing/290.html' class="" onlclick="openlink1()" >View Project</a>
+						</div>
+					</section>
+					<section class="feature right">
+						<a href="#" class="image"><img height="80" width="350" src="images/tableau.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Tableau Project</h3>
+							<p>These are various data visualisation projects created in Tableau.</p>
+							<a href='https://public.tableau.com/app/profile/pardeepti' class="" >View Project</a>
 						</div>
 					</section>
 					<section class="feature left">
@@ -71,14 +85,7 @@
 							<a href='https://github.com/PSEnlit/Covid-Analysis---SQL/blob/main/COVID%20Analysis' class="" onlclick="openlink1()" >View Project</a>
 						</div>
 					</section>
-					<section class="feature right">
-						<a href="#" class="image"><img height="80" width="350" src="images/tableau.jpg" alt="" /></a>
-						<div class="content">
-							<h3>Tableau Project</h3>
-							<p>These are various data visualisation projects created in Tableau.</p>
-							<a href='https://public.tableau.com/app/profile/pardeepti' class="" >View Project</a>
-						</div>
-					</section>
+					
 				</div>
 
 				<!--
