--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				<h1>Pardeepti's Project Portfolio</h1>
 				<p>I am a Data Analyst well versed in <a href="">SQL, R, Tableau and Advanced Excel</a>
 				<br />
-					<h2> I help businesses solve problems
+					<h3> I help businesses solve problems
 					<br />
 					by using data & generating insights
 					<br />
-					that support effective decision making.</h2>
+					that support effective decision making.</h3>
 					
 			<!--	and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 			-->
@@ -45,7 +45,7 @@
 				</header> -->
 
 				<div class="box alt container">
-					<section class="feature right">
+					<section class="feature left">
 						<a href="#" class="image" ><img height="100" width="250" src="images/genome.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Market Research Report</h3>
