--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				<h1>Pardeepti's Project Portfolio</h1>
 				<p>I am a Data Analyst well versed in <a href="">SQL, R, Tableau and Advanced Excel</a>
 				<br />
-					<h3> I help businesses solve problems
+					<p> I help businesses solve problems
 					<br />
 					by using data & generating insights
 					<br />
-					that support effective decision making.</h3>
+					that support effective decision making.</p>
 					
 			<!--	and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 			-->
@@ -50,7 +50,7 @@
 						<div class="content">
 							<h3>Market Research Report</h3>
 							<p>The project is about Next Generation Sequencing (NGS) Market, 2020-2030. It covers the Genome Sequencing Services, Technologies and the companies in NGS domain.</p>
-							<a href='https://www.rootsanalysis.com/reports/view_document/next-generation-sequencing/290.html' class="" onlclick="openlink1()" >View Project</a>
+							<a href='https://www.rootsanalysis.com/reports/view_document/next-generation-sequencing/290.html' >View Project</a>
 						</div>
 					</section>
 					<section class="feature right">
